2005-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_pack_pixbuf):
	* libmuine/egg/Makefile.am:
	R libmuine/egg/eggintl.h:
	R libmuine/egg/eggmarshalers.c:
	R libmuine/egg/eggmarshalers.h:
	R libmuine/egg/eggmarshalers.list:
	* libmuine/egg/eggtrayicon.c:
	R libmuine/egg/eggtraymanager.c:
	R libmuine/egg/eggtraymaneger.h:
	R libmuine/egg/update-from-egg.sh:
	* libmuine/metadata.c: (get_mp3_duration), (get_mp3_comment_value),
	(assign_metadata_mp4):

	Silence GCC 4.0 warnings, and remove some egg cruft.

2005-02-05  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Bump version number to 0.8.1.99.
	
	* src/Album.cs:
	* src/Song.cs:

	Small memory optimization: share "album" and "year" fields among
	all songs of the same album.

2005-02-03  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* configure.in:

	Release 0.8.1.
	
	* libmuine/player-xine.c: (signal_idle), (player_play):
	
	Reset timer_add when starting to play again after an EOS.

2005-02-01  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.1pre4.

2005-02-01  Jorn Baayen  <jbaayen@gnome.org>

	* doc/en/Muine.DBusLib/Player.xml:

	Document GetAlbumCover.

2005-02-01  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* configure.in:
	* data/glade/PlaylistWindow.glade:
	* libmuine/Makefile.am:
	* libmuine/rb-ellipsizing-label.c: (rb_strcmp), (rb_str_is_equal),
	(measure_string_width), (compute_character_widths),
	(start_element_handler), (end_element_handler),
	(append_ellipsized_text), (text_handler), (ellipsize_string),
	(rb_string_ellipsize_start), (rb_string_ellipsize_end),
	(rb_string_ellipsize_middle), (set_text_ellipsized),
	(rb_ellipsizing_label_get_type), (rb_ellipsizing_label_init),
	(rb_ellipsizing_label_finalize), (rb_ellipsizing_label_new),
	(rb_ellipsizing_label_set_text), (rb_ellipsizing_label_set_markup),
	(rb_ellipsizing_label_set_mode), (rb_ellipsizing_label_get_width),
	(real_size_request), (real_size_allocate), (real_expose_event),